docs: update LaTex syntex

--- a/_posts/2024-08-06-Integer.md
+++ b/_posts/2024-08-06-Integer.md
@@ -5,6 +5,7 @@ date: 2024-08-06 15:24:00
 description: 양,음의 정수와 표현
 tags: Integer
 categories: CS
+use_math: true
 ---
 
 # 정수Integer
@@ -14,7 +15,7 @@ categories: CS
 
 ## 음의 정수Negative Integer
 ### 보수Complement
- 보수란 **각 자리의 숫자의 합이 어느 일정한 수가 되게 하는 수**이다. 간단하게 ‘보충해 주는 수’이다. 일반화 한다면 $$x$$의 $$(x+k)$$에 대한 보수는 $$k$$이다. 컴퓨터는 음수를 보수의 형태로 저장하기에 보수의 개념을 이해해야한다.  
+ 보수란 **각 자리의 숫자의 합이 어느 일정한 수가 되게 하는 수**이다. 간단하게 ‘보충해 주는 수’이다. 일반화 한다면 $x$의 $(x+k)$에 대한 보수는 $k$이다. 컴퓨터는 음수를 보수의 형태로 저장하기에 보수의 개념을 이해해야한다.  
  간단한 예를 들어보자. 십진수 3의 9의 보수는 3을 더해 9가 되는 숫자인 6이다. 십진수 26의 9의 보수는 각 자리에 더해 9를 만들 수 있는 수인 73이다.
 #### 10의 보수
  10의 보수는 약간 특별한데, 9의 보수에 1을 더한 것과 같으며, 해당 수를 10의 제곱으로 만들어 주는 수이다.  
