--- a/_posts/2024-08-11-Variable.md
+++ b/_posts/2024-08-11-Variable.md
@@ -3,7 +3,11 @@ layout: post
 title: Variable
 date: 2024-08-11 14:45:00
 description: 변수
-tags: Variable Global_Variable Local_Variable nonlocal
+tags: 
+  - Variable 
+  - Global Variable 
+  - Local Variable 
+  - nonlocal
 categories: CS
 ---
 
