--- a/_posts/2024-09-02-boj2231.md
+++ b/_posts/2024-09-02-boj2231.md
@@ -3,14 +3,16 @@ layout: post
 title: BOJ_2231
 date: 2024-09-02 12:37:00
 description: 분해합 구하기
-tags: bruteforce
+tags: 
+  - Brute Force
 categories: Algorithm
+use_math: true
 ---
 
 # 2231 - 분해합 구하기
 ## Try #1
  해당 문제를 수학적으로 접근하였을 때 다음과 같은 일반식을 발견할 수 있었다.
-$$N = \sum_{k=1}^{i}(n_k(10^{k-1}+1))\quad (i=len(N))$$
+$N = \sum_{k=1}^{i}(n_k(10^{k-1}+1))\quad (i=len(N))$  
 충분한 시간을 들인다면, 반복문을 사용하여 구현하는 것도 가능하겠지만, 코드 작성, 실행시간 등의 문제로 최적의 방법이 아니라고 생각되어 접근 방식을 변경하였다.
 ## Try#2
 ### Brute Force
